objects/Cvent_Asset_Subgroup__c.object
<CustomObject>
    <fields>
        <fullName>Cvent_Asset_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cvent Asset Group</label>
        <referenceTo>Cvent_Asset_Group__c</referenceTo>
        <relationshipLabel>Cvent Asset Subgroups</relationshipLabel>
        <relationshipName>Cvent_Asset_Subgroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>In search screens the results will be ordered in ascending order of this number. If the numbers are the same, alphabetical sort will be used.</inlineHelpText>
        <label>Sort Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Cvent Asset Subgroup</label>
    <nameField>
        <label>Cvent Asset Subgroup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cvent Asset Subgroups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>Sort_Order__c</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Cvent_Asset_Group__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>